array connected to the DOM

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <section class="game__section">
         <section class="game__sadfaces">
-          <div id="sadface__angrycontainer">
+          <!-- <div id="sadface__angrycontainer">
             <i
               id="sadface__angry"
               class="sadface__angry sad__faces fas fa-angry fa-7x"
@@ -145,7 +145,7 @@
               class="sad__facetears sad__faces fas fa-sad-tear fa-5x"
             ></i>
             <div class="sadface__tearhitpoints8 hitpoints__text">45</div>
-          </div>
+          </div> -->
         </section>
 
         <section class="game__happyfaces">
