--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
       </section>
 
       <section class="game__section">
+        <div class="winning__message"></div>
+
         <section class="game__sadfaces">
+         
+
           <!-- <div id="sadface__angrycontainer">
             <i
               id="sadface__angry"
@@ -97,7 +101,6 @@
             <div class="sadface__tearhitpoints2 hitpoints__text">45</div>
           </div>
 
-          <div class="winning__message"></div>
 
           <div id="sadface__tearcontainer3">
             <i
@@ -167,8 +170,10 @@
       </section>
 
       <section class="game__button">
-        <button class="game__shootBTN">SHOOT!</button>
+        <button class="game__shootBTN">SHOOT</button>
       </section>
+
+      <div class="outro">Made by Sasha O'Donovan for nology.io</div>
     </section>
 
     <script src="script.js"></script>
