read me updated

--- a/index.html
+++ b/index.html
@@ -13,29 +13,21 @@
   </head>
 
   <body>
-
-    
     <section class="game__container">
-
       <section class="intro__container">
         <div class="intro__title">TURN THAT FROWN UPSIDE DOWN...</div>
       </section>
 
-
       <section class="game__section">
         <div class="winning__message"></div>
 
-        <section class="game__sadfaces">
-
-        </section>
-
+        <section class="game__sadfaces"></section>
       </section>
 
       <section class="game__button">
         <button class="game__shootBTN">SHOOT</button>
       </section>
 
-      
       <section class="game__restart">
         <div class="game__restartBTN">Click here to restart!</div>
       </section>
