--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/50e160d117.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
     <title>Turn that frown upside down!</title>
   </head>
 
